rename selector to podSelector to make it more clear.
This commit renames the selector to podSelector as it makes it clearer
what the selector is selecting.

--- a/pkg/clusteragent/admission/mutate/autoinstrumentation/testdata/both_versions_and_targets.yaml
+++ b/pkg/clusteragent/admission/mutate/autoinstrumentation/testdata/both_versions_and_targets.yaml
@@ -5,7 +5,7 @@ apm_config:
       python: "default"
     targets:
       - name: "Billing Service"
-        selector:
+        podSelector:
           matchLabels:
             app: "billing-service"
           matchExpressions:
