--- a/pkg/clusteragent/admission/mutate/autoinstrumentation/testdata/both_enabled_and_targets.yaml
+++ b/pkg/clusteragent/admission/mutate/autoinstrumentation/testdata/both_enabled_and_targets.yaml
@@ -5,7 +5,7 @@ apm_config:
       - "foo"
     targets:
       - name: "Billing Service"
-        selector:
+        podSelector:
           matchLabels:
             app: "billing-service"
           matchExpressions:
