--- a/pkg/clusteragent/admission/mutate/autoinstrumentation/testdata/filter.yaml
+++ b/pkg/clusteragent/admission/mutate/autoinstrumentation/testdata/filter.yaml
@@ -7,7 +7,7 @@ apm_config:
       - "system"
     targets:
       - name: "Billing Service"
-        selector:
+        podSelector:
           matchLabels:
             app: "billing-service"
         namespaceSelector:
@@ -16,13 +16,13 @@ apm_config:
         ddTraceVersions:
           python: "v2"
       - name: "Microservices"
-        selector:
+        podSelector:
           matchLabels:
             language: "java"
         ddTraceVersions:
           java: "v1"
       - name: "Unknown Language"
-        selector:
+        podSelector:
           matchLabels:
             language: "unknown"
       - name: "Default"
