--- a/test/regression/cases/quality_gate_idle/lading/lading.yaml
+++ b/test/regression/cases/quality_gate_idle/lading/lading.yaml
@@ -16,7 +16,7 @@ target_metrics:
       tags:
         sub_agent: "process"
   - expvar: #trace agent telemetry
-      uri: "http://127.0.0.1:5012/debug/vars"
+      uri: "https://127.0.0.1:5012/debug/vars"
       vars:
         - "/Event"
         - "/ServiceCheck"
