--- a/.gitlab/integration_test/otel.yml
+++ b/.gitlab/integration_test/otel.yml
@@ -67,6 +67,7 @@ datadog_otel_components_ocb_build:
       - ocb-output.log
       - otelcol-custom.log
       - flare-info.log
+    when: always
   before_script:
     - !reference [.retrieve_linux_go_deps]
   script:
