Use `-e` when running linter.python-type-check

--- a/.gitlab/lint/technical_linters.yml
+++ b/.gitlab/lint/technical_linters.yml
@@ -64,4 +64,4 @@ validate_modules:
 lint_python_type_check:
   extends: .lint
   script:
-    - inv linter.python-type-check    
+    - inv -e linter.python-type-check    
