on query a single prometheus metric

--- a/test/regression/cases/otel_to_otel_logs-collector-log/lading/lading.yaml
+++ b/test/regression/cases/otel_to_otel_logs-collector-log/lading/lading.yaml
@@ -28,3 +28,5 @@ blackhole:
 target_metrics:
   - prometheus:
       uri: "http://0.0.0.0:8888/metrics"
+      metrics:
+        - otelcol_receiver_accepted_log_records 
