Creating agent-metric-pipeline e2e tests

--- a/.gitlab/e2e/e2e.yml
+++ b/.gitlab/e2e/e2e.yml
@@ -341,6 +341,23 @@ new-e2e-aml:
     TARGETS: ./tests/agent-metrics-logs
     TEAM: agent-metrics-logs
 
+new-e2e-amp:
+  extends: .new_e2e_template
+  needs:
+    - !reference [.needs_new_e2e_template]
+    - deploy_deb_testing-a7_x64
+    - deploy_windows_testing-a7
+    - qa_agent
+    - qa_agent_jmx
+    - qa_agent_fips_jmx
+    - qa_dca
+  rules:
+    - !reference [.on_amp_or_e2e_changes]
+    - !reference [.manual]
+  variables:
+    TARGETS: ./tests/agent-metric-pipelines
+    TEAM: agent-metric-pipelines
+
 new-e2e-cws:
   extends: .new_e2e_template
   rules:
