--- a/.ddqa/config.toml
+++ b/.ddqa/config.toml
@@ -14,8 +14,8 @@ exclude_members = ["olivielpeau"]
 jira_project = "AGNTLOG"
 jira_issue_type = "Task"
 jira_statuses = ["To Do", "In Progress", "Done"]
-github_team = "agent-logs"
-github_labels = ["team/agent-logs"]
+github_team = "agent-log-pipelines"
+github_labels = ["team/agent-log-pipelines"]
 exclude_members = [""]
 
 [teams."Agent Metrics"]
@@ -51,7 +51,7 @@ exclude_members = ["sgnn7", "truthbk", "cmourot"]
 # github_team = "agent-runtimes"
 # github_labels = ["team/agent-runtimes"]
 # exclude_members = ["sgnn7", "cmourot"]
-# 
+#
 # [teams."Agent Configuration"]
 # jira_project = "ACFG"
 # jira_issue_type = "QA"
