--- a/tasks/libs/pipeline/github_jira_map.yaml
+++ b/tasks/libs/pipeline/github_jira_map.yaml
@@ -14,7 +14,7 @@
 '@datadog/container-intake': CTK
 '@datadog/agent-metrics-logs': AMLII
 '@datadog/agent-metrics': AGTMETRICS
-'@datadog/agent-logs': AGNTLOG
+'@datadog/agent-log-pipelines': AGNTLOG
 '@datadog/agent-runtimes': ARUN
 '@datadog/agent-configuration': ACFG
 '@datadog/container-app': CAP
