--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -319,7 +319,7 @@
 /comp/forwarder/eventplatform @DataDog/agent-logs
 /comp/forwarder/eventplatformreceiver @DataDog/agent-logs
 /comp/forwarder/orchestrator @DataDog/agent-logs
-/comp/metadata/inventoryhaagent @DataDog/ndm-core
+/comp/metadata/haagent @DataDog/ndm-core
 /comp/metadata/packagesigning @DataDog/agent-delivery
 /comp/trace/etwtracer @DataDog/windows-agent
 /comp/autoscaling/datadogclient @DataDog/container-integrations
