--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -214,7 +214,7 @@ updates:
     directory: Dockerfiles/agent/bouncycastle-fips
     labels:
       - dependencies
-      - team/agent-metrics-logs
+      - team/agent-metric-pipelines
       - changelog/no-changelog
     schedule:
       interval: weekly
