--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -36,7 +36,7 @@
 /Makefile.trace                         @DataDog/agent-delivery
 
 /mkdocs.yml                             @DataDog/agent-devx-infra
-/release.json                           @DataDog/agent-delivery @DataDog/agent-metrics @DataDog/windows-kernel-integrations @DataDog/agent-security
+/release.json                           @DataDog/agent-delivery @DataDog/agent-metric-pipelines @DataDog/windows-kernel-integrations @DataDog/agent-security
 /renovate.json                          @DataDog/agent-devx-infra
 /requirements.txt                       @DataDog/agent-devx-infra
 /pyproject.toml                         @DataDog/agent-devx-infra @DataDog/agent-devx-loops
@@ -95,7 +95,7 @@
 /.gitlab/binary_build/linux.yml                      @DataDog/agent-devx-infra @DataDog/agent-delivery
 /.gitlab/functional_test/include.yml                 @DataDog/agent-devx-infra
 /.gitlab/install_script_testing/install_script_testing.yml          @DataDog/agent-delivery @DataDog/container-ecosystems
-/.gitlab/integration_test/dogstatsd.yml              @DataDog/agent-devx-infra @DataDog/agent-metrics
+/.gitlab/integration_test/dogstatsd.yml              @DataDog/agent-devx-infra @DataDog/agent-metric-pipelines
 /.gitlab/integration_test/include.yml                @DataDog/agent-devx-infra
 /.gitlab/integration_test/linux.yml                  @DataDog/agent-devx-infra
 /.gitlab/integration_test/otel.yml                   @DataDog/agent-devx-infra @DataDog/opentelemetry @DataDog/opentelemetry-agent
@@ -188,9 +188,9 @@
 /cmd/                                   @DataDog/agent-configuration
 /cmd/trace-agent/                       @DataDog/agent-apm
 /cmd/agent/subcommands/controlsvc       @DataDog/windows-agent
-/cmd/agent/subcommands/dogstatsd*       @DataDog/agent-metrics
+/cmd/agent/subcommands/dogstatsd*       @DataDog/agent-metric-pipelines
 /cmd/agent/subcommands/integrations     @DataDog/agent-integrations @DataDog/agent-runtimes
-/cmd/agent/subcommands/dogstatsd*       @DataDog/agent-metrics-logs
+/cmd/agent/subcommands/dogstatsd*       @DataDog/agent-metric-pipelines
 /cmd/agent/subcommands/remoteconfig     @Datadog/remote-config
 /cmd/agent/subcommands/snmp             @DataDog/ndm-core
 /cmd/agent/subcommands/streamlogs       @DataDog/agent-log-pipelines
@@ -217,7 +217,7 @@
 /cmd/cluster-agent-cloudfoundry/        @DataDog/agent-integrations
 /cmd/cluster-agent/api/v1/cloudfoundry_metadata.go        @DataDog/agent-integrations
 /cmd/cws-instrumentation/               @DataDog/agent-security
-/cmd/dogstatsd/                         @DataDog/agent-metrics
+/cmd/dogstatsd/                         @DataDog/agent-metric-pipelines
 /cmd/otel-agent/                        @DataDog/opentelemetry @DataDog/opentelemetry-agent
 /cmd/process-agent/                     @DataDog/container-intake
 /cmd/serverless/                        @DataDog/serverless @Datadog/serverless-aws
@@ -252,15 +252,15 @@
 /Dockerfiles/agent/entrypoint.ps1        @DataDog/container-integrations @DataDog/windows-agent
 /Dockerfiles/agent/windows/              @DataDog/container-integrations @DataDog/windows-agent
 /Dockerfiles/agent-ot                    @DataDog/opentelemetry @DataDog/opentelemetry-agent
-/Dockerfiles/agent/bouncycastle-fips     @DataDog/agent-metrics
+/Dockerfiles/agent/bouncycastle-fips     @DataDog/agent-metric-pipelines
 
 /docs/                                  @DataDog/agent-devx-loops
-/docs/dev/checks/                       @DataDog/agent-metrics
+/docs/dev/checks/                       @DataDog/agent-metric-pipelines
 /docs/cloud-workload-security/          @DataDog/documentation @DataDog/agent-security
 
 /docs/public/components/                                     @DataDog/agent-runtimes
 /docs/public/hostname/                                       @DataDog/agent-runtimes
-/docs/public/architecture/dogstatsd/                         @DataDog/agent-metrics
+/docs/public/architecture/dogstatsd/                         @DataDog/agent-metric-pipelines
 /docs/public/guidelines/deprecated-components-documentation/ @DataDog/agent-runtimes
 
 /google-marketplace/                    @DataDog/container-ecosystems
@@ -288,13 +288,13 @@
 # BEGIN COMPONENTS
 /comp @DataDog/agent-runtimes
 /comp/agent @DataDog/agent-runtimes
-/comp/aggregator @DataDog/agent-metrics
+/comp/aggregator @DataDog/agent-metric-pipelines
 /comp/api @DataDog/agent-runtimes
-/comp/checks @DataDog/agent-metrics
-/comp/collector @DataDog/agent-metrics
+/comp/checks @DataDog/agent-metric-pipelines
+/comp/collector @DataDog/agent-metric-pipelines
 /comp/core @DataDog/agent-runtimes
-/comp/dogstatsd @DataDog/agent-metrics
-/comp/forwarder @DataDog/agent-metrics
+/comp/dogstatsd @DataDog/agent-metric-pipelines
+/comp/forwarder @DataDog/agent-metric-pipelines
 /comp/logs @DataDog/agent-log-pipelines
 /comp/metadata @DataDog/agent-configuration
 /comp/ndmtmp @DataDog/ndm-core
@@ -308,7 +308,7 @@
 /comp/trace @DataDog/agent-apm
 /comp/updater @DataDog/fleet @DataDog/windows-agent
 /comp/agent/cloudfoundrycontainer @DataDog/agent-integrations
-/comp/agent/jmxlogger @DataDog/agent-metrics
+/comp/agent/jmxlogger @DataDog/agent-metric-pipelines
 /comp/aggregator/diagnosesendermanager @DataDog/agent-configuration
 /comp/checks/agentcrashdetect @DataDog/windows-kernel-integrations
 /comp/checks/windowseventlog @DataDog/windows-agent
@@ -336,7 +336,7 @@
 /comp/languagedetection/client @DataDog/container-platform
 /comp/rdnsquerier @DataDog/ndm-integrations
 /comp/serializer/logscompression @DataDog/agent-log-pipelines
-/comp/serializer/metricscompression @DataDog/agent-metrics
+/comp/serializer/metricscompression @DataDog/agent-metric-pipelines
 /comp/snmpscan @DataDog/ndm-core
 # END COMPONENTS
 
@@ -349,9 +349,9 @@
 # pkg
 /pkg/                                   @DataDog/agent-runtimes
 /pkg/api/                               @DataDog/agent-runtimes
-/pkg/aggregator/                        @DataDog/agent-metrics
-/pkg/collector/                         @DataDog/agent-metrics
-/pkg/commonchecks/                      @DataDog/agent-metrics
+/pkg/aggregator/                        @DataDog/agent-metric-pipelines
+/pkg/collector/                         @DataDog/agent-metric-pipelines
+/pkg/commonchecks/                      @DataDog/agent-metric-pipelines
 /pkg/cli/                               @DataDog/agent-configuration
 /pkg/cli/subcommands/clusterchecks      @DataDog/container-platform
 /pkg/discovery/                         @DataDog/agent-discovery
@@ -359,11 +359,11 @@
 /pkg/fips                               @DataDog/agent-runtimes
 /pkg/gohai                              @DataDog/agent-configuration
 /pkg/gpu/                               @DataDog/ebpf-platform
-/pkg/jmxfetch/                          @DataDog/agent-metrics
-/pkg/metrics/                           @DataDog/agent-metrics
-/pkg/metrics/metricsource.go            @DataDog/agent-metrics @DataDog/agent-integrations
-/pkg/serializer/                        @DataDog/agent-metrics
-/pkg/serializer/internal/metrics/origin_mapping.go  @DataDog/agent-metrics @DataDog/agent-integrations
+/pkg/jmxfetch/                          @DataDog/agent-metric-pipelines
+/pkg/metrics/                           @DataDog/agent-metric-pipelines
+/pkg/metrics/metricsource.go            @DataDog/agent-metric-pipelines @DataDog/agent-integrations
+/pkg/serializer/                        @DataDog/agent-metric-pipelines
+/pkg/serializer/internal/metrics/origin_mapping.go  @DataDog/agent-metric-pipelines @DataDog/agent-integrations
 /pkg/serverless/                        @DataDog/serverless @Datadog/serverless-aws
 /pkg/serverless/appsec/                 @DataDog/asm-go
 /pkg/status/                            @DataDog/agent-configuration
@@ -394,7 +394,7 @@
 /pkg/clusteragent/admission/mutate/cwsinstrumentation    @Datadog/agent-security
 /pkg/clusteragent/orchestrator/         @DataDog/container-app
 /pkg/clusteragent/telemetry/            @DataDog/apm-trace-storage
-/pkg/collector/                         @DataDog/agent-metrics
+/pkg/collector/                         @DataDog/agent-metric-pipelines
 /pkg/collector/corechecks/cluster/      @DataDog/container-integrations
 /pkg/collector/corechecks/cluster/orchestrator  @DataDog/container-app
 /pkg/collector/corechecks/containers/   @DataDog/container-integrations
@@ -451,7 +451,7 @@
 /pkg/fleet/                             @DataDog/fleet @DataDog/windows-agent
 /pkg/fleet/installer/setup/djm/         @DataDog/fleet @DataDog/data-jobs-monitoring
 /pkg/pidfile/                           @DataDog/agent-runtimes
-/pkg/persistentcache/                   @DataDog/agent-metrics
+/pkg/persistentcache/                   @DataDog/agent-metric-pipelines
 /pkg/proto/                             @DataDog/agent-runtimes
 /pkg/proto/datadog/languagedetection    @DataDog/container-intake
 /pkg/proto/datadog/process              @DataDog/container-intake
@@ -570,13 +570,13 @@
 /releasenotes/                          @DataDog/documentation
 /releasenotes-dca/                      @DataDog/documentation
 
-/rtloader/                              @DataDog/agent-metrics
+/rtloader/                              @DataDog/agent-metric-pipelines
 
 /tasks/                                 @DataDog/agent-devx-loops @DataDog/agent-devx-infra
 /tasks/msi.py                           @DataDog/windows-agent
 /tasks/agent.py                         @DataDog/agent-runtimes
 /tasks/go_deps.py                       @DataDog/agent-runtimes
-/tasks/dogstatsd.py                     @DataDog/agent-metrics
+/tasks/dogstatsd.py                     @DataDog/agent-metric-pipelines
 /tasks/update_go.py                     @DataDog/agent-runtimes
 /tasks/unit_tests/update_go_tests.py    @DataDog/agent-runtimes
 /tasks/cluster_agent_cloudfoundry.py    @DataDog/agent-integrations
@@ -588,7 +588,7 @@
 /tasks/kernel_matrix_testing/           @DataDog/ebpf-platform
 /tasks/ebpf_verifier/                   @DataDog/ebpf-platform
 /tasks/trace_agent.py                   @DataDog/agent-apm
-/tasks/rtloader.py                      @DataDog/agent-metrics
+/tasks/rtloader.py                      @DataDog/agent-metric-pipelines
 /tasks/security_agent.py                @DataDog/agent-security
 /tasks/sds.py                           @DataDog/agent-log-pipelines
 /tasks/systray.py                       @DataDog/windows-agent
@@ -607,7 +607,7 @@
 /tasks/unit_tests/testdata/components_src/ @DataDog/agent-runtimes
 /tasks/installer.py                     @DataDog/fleet
 /test/                                  @DataDog/agent-devx-loops
-/test/benchmarks/                       @DataDog/agent-metrics
+/test/benchmarks/                       @DataDog/agent-metric-pipelines
 /test/benchmarks/kubernetes_state/      @DataDog/container-integrations
 /test/integration/                      @DataDog/container-integrations
 /test/integration/docker/otel_agent_build_tests.py @DataDog/opentelemetry @DataDog/opentelemetry-agent
@@ -651,7 +651,7 @@
 /test/new-e2e/tests/gpu                       @Datadog/ebpf-platform
 /test/otel/                                   @DataDog/opentelemetry @DataDog/opentelemetry-agent
 /test/system/                                 @DataDog/agent-runtimes
-/test/system/dogstatsd/                       @DataDog/agent-metrics
+/test/system/dogstatsd/                       @DataDog/agent-metric-pipelines
 /test/benchmarks/apm_scripts/                 @DataDog/agent-apm
 /test/regression/                             @DataDog/single-machine-performance
 
@@ -661,10 +661,10 @@
 /tools/gdb/                             @DataDog/agent-runtimes
 /tools/go-update/                       @DataDog/agent-runtimes
 /tools/NamedPipeCmd/                    @DataDog/windows-kernel-integrations
-/tools/retry_file_dump/                 @DataDog/agent-metrics
+/tools/retry_file_dump/                 @DataDog/agent-metric-pipelines
 /tools/windows/                         @DataDog/windows-agent
 /tools/windows/DatadogAgentInstaller/WixSetup/localization-en-us.wxl @DataDog/windows-agent @DataDog/documentation
-/tools/agent_QA/                        @DataDog/agent-metrics @DataDog/agent-log-pipelines
+/tools/agent_QA/                        @DataDog/agent-metric-pipelines @DataDog/agent-log-pipelines
 
 /internal/tools/                        @DataDog/agent-devx-loops @DataDog/agent-devx-infra
 /internal/third_party/client-go         @DataDog/container-platform
