--- a/.ddqa/config.toml
+++ b/.ddqa/config.toml
@@ -34,31 +34,21 @@ github_team = "agent-processing-and-routing"
 github_labels = ["team/agent-processing-and-routing"]
 exclude_members = []
 
-[teams."Agent Shared Components"]
-jira_project = "ASCII"
+[teams."Agent Runtimes"]
+jira_project = "AGENTRUN"
 jira_issue_type = "QA"
 jira_statuses = ["To Do", "In Progress", "Done"]
-github_team = "agent-shared-components"
-github_labels = ["team/agent-shared-components"]
-exclude_members = ["sgnn7", "truthbk", "cmourot"]
+github_team = "agent-runtimes"
+github_labels = ["team/agent-runtimes"]
+exclude_members = ["sgnn7", "cmourot"]
 
-# Those will be uncommented once the proper issue types are created in JIRA.
-#
-# [teams."Agent Runtimes"]
-# jira_project = "ARUN"
-# jira_issue_type = "QA"
-# jira_statuses = ["To Do", "In Progress", "Done"]
-# github_team = "agent-runtimes"
-# github_labels = ["team/agent-runtimes"]
-# exclude_members = ["sgnn7", "cmourot"]
-#
-# [teams."Agent Configuration"]
-# jira_project = "ACFG"
-# jira_issue_type = "QA"
-# jira_statuses = ["To Do", "In Progress", "Done"]
-# github_team = "agent-configuration"
-# github_labels = ["team/agent-configuration"]
-# exclude_members = ["sgnn7"]
+[teams."Agent Configuration"]
+jira_project = "AGENTCFG"
+jira_issue_type = "QA"
+jira_statuses = ["To Do", "In Progress", "Done"]
+github_team = "agent-configuration"
+github_labels = ["team/agent-configuration"]
+exclude_members = ["sgnn7"]
 
 [teams."Agent Developer Tools"]
 jira_project = "ADXT"
