--- a/.gitlab/.pre/celian.yml
+++ b/.gitlab/.pre/celian.yml
@@ -11,4 +11,4 @@ overall-pipeline-stats:
     # In particular, --break-system-packages command line option is
     # required to use the old behavior or use a virtual env. https://github.com/actions/runner-images/issues/8615
     - python3 -m pip install -r tasks/libs/requirements-github.txt --break-system-packages
-    - inv -e github.print-overall-pipeline-stats -n 90
+    - inv -e github.print-overall-pipeline-stats -n 90 --sleeping
