--- a/.gitlab/package_build/dmg.yml
+++ b/.gitlab/package_build/dmg.yml
@@ -152,6 +152,8 @@ new-agent_dmg-x64-a7:
   #   - export RELEASE_VERSION=$RELEASE_VERSION_7
   script:
     - set -e
+    - brew remove --force --ignore-dependencies --formula awscli
+    - exit
     - !reference [.vault_login]
     # Setup builder
     - brew remove --force --ignore-dependencies $(brew list --formula)
