--- a/tasks/libs/pipeline/github_slack_map.yaml
+++ b/tasks/libs/pipeline/github_slack_map.yaml
@@ -33,7 +33,7 @@
 '@datadog/windows-kernel-integrations': '#windows-kernel-integrations-ops'
 '@datadog/opentelemetry': '#opentelemetry-ops'
 '@datadog/agent-e2e-testing': '#agent-devx-loops-ops'
-'@datadog/software-integrity-and-trust': '#sit'
+'@datadog/sdlc-security': '#sit'
 '@datadog/single-machine-performance': '#single-machine-performance'
 '@datadog/agent-integrations': '#agent-integrations'
 '@datadog/debugger': '#debugger-ops-prod'
