--- a/tasks/libs/pipeline/github_slack_review_map.yaml
+++ b/tasks/libs/pipeline/github_slack_review_map.yaml
@@ -35,7 +35,7 @@
 '@datadog/opentelemetry': '#opentelemetry'
 '@datadog/opentelemetry-agent': '#opentelemetry-agent'
 '@datadog/agent-e2e-testing': '#agent-e2e-framework-help'
-'@datadog/software-integrity-and-trust': '#sit'
+'@datadog/sdlc-security': '#sit'
 '@datadog/single-machine-performance': '#single-machine-performance'
 '@datadog/agent-integrations': '#agent-integrations'
 '@datadog/debugger': '#debugger'
