--- a/.gitlab/binary_build/cluster_agent.yml
+++ b/.gitlab/binary_build/cluster_agent.yml
@@ -9,9 +9,15 @@
   script:
     - inv check-go-version
     - inv -e cluster-agent.build --release-version "$RELEASE_VERSION_7"
-    - $S3_CP_CMD $CI_PROJECT_DIR/$CLUSTER_AGENT_BINARIES_DIR/datadog-cluster-agent $S3_ARTIFACTS_URI/datadog-cluster-agent.$ARCH
-    - $S3_CP_CMD $CI_PROJECT_DIR/Dockerfiles/cluster-agent/datadog-cluster.yaml $S3_ARTIFACTS_URI/datadog-cluster.yaml
-    - $S3_CP_CMD $CI_PROJECT_DIR/Dockerfiles/cluster-agent/security-agent-policies $S3_ARTIFACTS_URI/security-agent-policies --recursive --exclude '.git/*' --exclude '.github/*'
+  artifacts:
+    paths:
+      - $CLUSTER_AGENT_BINARIES_DIR/datadog-cluster-agent
+      - Dockerfiles/cluster-agent/datadog-cluster.yaml
+      - Dockerfiles/cluster-agent/security-agent-policies
+    exclude:
+      - Dockesfiles/cluster-agent/security-agent-policies/.git/**/*
+      - Dockesfiles/cluster-agent/security-agent-policies/.github/**/*
+
   variables:
     KUBERNETES_MEMORY_REQUEST: "8Gi"
     KUBERNETES_MEMORY_LIMIT: "8Gi"
