attempt to fix CWS instrumentation copies

--- a/.gitlab/container_build/docker_linux.yml
+++ b/.gitlab/container_build/docker_linux.yml
@@ -239,8 +239,7 @@ docker_build_cluster_agent_amd64:
     BUILD_CONTEXT: Dockerfiles/cluster-agent
   before_script:
     - cp $CLUSTER_AGENT_BINARIES_DIR/datadog-cluster-agent $BUILD_CONTEXT/
-    - cp $CWS_INSTRUMENTATION_BINARIES_DIR/cws-instrumentation.arm64 $BUILD_CONTEXT/
-    - cp $CWS_INSTRUMENTATION_BINARIES_DIR/cws-instrumentation.amd64 $BUILD_CONTEXT/
+    - cp -R $CWS_INSTRUMENTATION_BINARIES_DIR $BUILD_CONTEXT/
     - cp -Rvf Dockerfiles/agent/nosys-seccomp Dockerfiles/cluster-agent/
 
 docker_build_cluster_agent_arm64:
@@ -258,8 +257,7 @@ docker_build_cluster_agent_arm64:
     BUILD_CONTEXT: Dockerfiles/cluster-agent
   before_script:
     - cp $CLUSTER_AGENT_BINARIES_DIR/datadog-cluster-agent $BUILD_CONTEXT/
-    - cp $CWS_INSTRUMENTATION_BINARIES_DIR/cws-instrumentation.arm64 $BUILD_CONTEXT/
-    - cp $CWS_INSTRUMENTATION_BINARIES_DIR/cws-instrumentation.amd64 $BUILD_CONTEXT/
+    - cp -R $CWS_INSTRUMENTATION_BINARIES_DIR $BUILD_CONTEXT/
     - cp -Rvf Dockerfiles/agent/nosys-seccomp Dockerfiles/cluster-agent/
 
 # build the cws-instrumentation image
