--- a/test/regression/cases/otel_to_otel_logs-collector-metric/lading/lading.yaml
+++ b/test/regression/cases/otel_to_otel_logs-collector-metric/lading/lading.yaml
@@ -27,4 +27,8 @@ blackhole:
       body_variant: "nothing"
 target_metrics:
   - prometheus:
-      uri: "http://0.0.0.0:8888/metrics"      
+      uri: "http://0.0.0.0:8888/metrics"
+      metrics:
+        - otelcol_exporter_queue_size
+        - otelcol_receiver_accepted_metric_point
+        - otelcol_exporter_sent_metric_points
