--- a/test/regression/cases/otel_to_otel_logs-collector/lading/lading.yaml
+++ b/test/regression/cases/otel_to_otel_logs-collector/lading/lading.yaml
@@ -27,4 +27,8 @@ blackhole:
       body_variant: "nothing"
 target_metrics:
   - prometheus:
-      uri: "http://0.0.0.0:8888/metrics"            
+      uri: "http://0.0.0.0:8888/metrics"
+      metrics:
+        - otelcol_receiver_accepted_spans
+        - otelcol_exporter_sent_spans       
+        - otelcol_exporter_queue_size
