--- a/test/new-e2e/tests/otel/otel-agent/testdata/minimal-provided-config.yml
+++ b/test/new-e2e/tests/otel/otel-agent/testdata/minimal-provided-config.yml
@@ -201,10 +201,14 @@ service:
       readers:
         - pull:
             exporter:
-              additionalproperties:
               prometheus:
                 host: "localhost"
                 port: 8888
+                with_resource_constant_labels:
+                  included: []
+                without_scope_info: true
+                without_type_suffix: true
+                without_units: true
     resource: {}
     traces:
       level: Basic
