--- a/test/new-e2e/tests/otel/otel-agent/testdata/no-dd-exporter-provided-config.yml
+++ b/test/new-e2e/tests/otel/otel-agent/testdata/no-dd-exporter-provided-config.yml
@@ -176,10 +176,14 @@ service:
       readers:
       - pull:
           exporter:
-            additionalproperties: null
             prometheus:
               host: localhost
               port: 8888
+              with_resource_constant_labels:
+                included: []
+              without_scope_info: true
+              without_type_suffix: true
+              without_units: true
     resource: {}
     traces:
       level: Basic
